--- a/index.html
+++ b/index.html
@@ -21,16 +21,27 @@
 </head>
 <body>
     <div>
-        HERO
+        <div class="short">
+            HERO
+        </div>
     </div>
 
 <main>
-    MAIN CONTENT
+    <div class="long">
+        MAIN CONTENT
+    </div>
 </main>
 <footer>
-    FOOTER
+    <div class="container">
+        <div class="long">
+            SOCIAL
+        </div>
+        <div class="short">
+            FOOTER BOTTOM TEXT
+        </div>
+    </div>
 </footer>
-    <script src="./js/main.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 </html>
