--- a/index.html
+++ b/index.html
@@ -40,10 +40,24 @@
     <main class="container">
         <div class="long columns">
             <div class="left">
-                LEFT CONTENT
+                <h2>About startup</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos natus est quae molestiae odio a <a href="#">Matrox</a> minus tempora quod hic!</p>
+                <div class="progress-bar">
+                    PROGRESS BAR
+                </div>
+                <div class="progress-bar">
+                    PROGRESS BAR
+                </div>
+                <div class="progress-bar">
+                    PROGRESS BAR
+                </div>
             </div>
             <div class="right">
-                RIGHT CONTENT
+                <h2>Have any question?</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit <a href="mailto:20grupe@demoproject.lt">20grupe@demoproject.lt</a>. Quas minima reiciendis suscipit similique a quidem!</p>
+                <form class="form">
+                    MESSAGE FORM
+                </form>
             </div>
         </div>  
     </main>
