Footer and pseudo elements

--- a/index.html
+++ b/index.html
@@ -66,7 +66,16 @@
             SOCIALS
         </div>
         <div class="short">
-            FOOTER BOTTOM TEXT
+            <img src="./img/logo-white.png" alt="logo-white">
+            <p>
+                <span>
+                    Copyright &copy; 2020 <a href="#">Matrox</a></span>
+                <span>All rights reserved</span>
+                <span>Designed by <a href="#" target="_blank">TrendyTheme</a></span>
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat sapiente <a href="#">200+</a> dolorum nesciunt voluptates consectetur eligendi, perspiciatis quos <a href="#">Matrox</a> odio cum obcaecati.
+            </p>
         </div>
     </footer>
     <script src ="./js/main.js"></script>
