--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="./css/reset.css">
 <link rel="stylesheet" href="./css/layout.css">
 <!-- 3rd party components -->
+<link rel="stylesheet" href="./css/font-awesome.min.css">
 <!-- your components -->
 <link rel="stylesheet" href="./css/button.css">
 <link rel="stylesheet" href="./css/clock.css">
@@ -63,7 +64,13 @@
     </main>
     <footer  class="container bg-main-color">
         <div class="long">
-            SOCIALS
+            <a href="#" target="_blank" class="fa fa-facebook" aria-hidden="true"></a>
+            <a href="#" target="_blank" class="fa fa-twitter" aria-hidden="true"></a>
+            <a href="#" target="_blank" class="fa fa-dribbble" aria-hidden="true"></a>
+            <a href="#" target="_blank" class="fa fa-tumblr" aria-hidden="true"></a>
+            <a href="#" target="_blank" class="fa fa-linkedin" aria-hidden="true"></a>
+            <a href="#" target="_blank" class="fa fa-instagram" aria-hidden="true"></a>
+            <a href="#" target="_blank" class="fa fa-rss" aria-hidden="true"></a>
         </div>
         <div class="short">
             <img src="./img/logo-white.png" alt="logo-white">
