--- a/index.html
+++ b/index.html
@@ -28,7 +28,22 @@
             <h1>Coming soon</h1>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint ullam laudantium numquam repellat culpa.</p>
             <div class="clock">
-                CLOCK
+                <div class="time">
+                    <div class="value">432</div>
+                    <div class="label">Days</div>
+                </div>
+                <div class="time">
+                    <div class="value">09</div>
+                    <div class="label">Hours</div>
+                </div>
+                <div class="time">
+                    <div class="value">37</div>
+                    <div class="label">Minutes</div>
+                </div>
+                <div class="time">
+                    <div class="value">39</div>
+                    <div class="label">Seconds</div>
+                </div>
             </div>
             <form class="form">
                 SUBSRCRIBE FORM
@@ -89,3 +104,17 @@
 </body>
 
 </html>
+
+
+<!-- Pvz kaip uzsipildyti header su emmetu.  -->
+
+<!-- <header>
+    <img src="" alt="" class="logo">
+    <nav>
+        <a href=""></a>
+        <a href=""></a>
+        <a href=""></a>
+        <a href=""></a>
+        <a href=""></a>
+    </nav>
+</header> -->
