--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 SUBSRCRIBE FORM
             </form>
             <div class="mouse">
-                MOUSE
+                <div class="wheel"></div>
             </div>
         </div>
     </div>
