--- a/index.html
+++ b/index.html
@@ -58,16 +58,33 @@
             <div class="left">
                 <h2>About startup</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos natus est quae molestiae odio a <a href="#">Matrox</a> minus tempora quod hic!</p>
-                <div class="progress-bar">
-                    PROGRESS BAR
-                </div>
-                <div class="progress-bar">
-                    PROGRESS BAR
-                </div>
-                <div class="progress-bar">
-                    PROGRESS BAR
-                </div>
+
+                <div class="progress-bar bar-1">
+                    <div class="top">
+                        <div class="label">UX design</div>
+                        <div class="value">90%</div>
+                    </div>
+                    <div class="bottom">
+                        <div class="progress"></div>
+                    </div>
+                <div class="progress-bar bar-2">
+                    <div class="top">
+                        <div class="label">UX design</div>
+                        <div class="value">50%</div>
+                    </div>
+                    <div class="bottom">
+                        <div class="progress"></div>
+                    </div>
+                    <div class="progress-bar bar-3">
+                        <div class="top">
+                            <div class="label">UX design</div>
+                            <div class="value">65%</div>
+                        </div>
+                        <div class="bottom">
+                            <div class="progress"></div>
+                        </div>                
             </div>
+        </div>
             <div class="right">
                 <h2>Have any question?</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit <a href="mailto:20grupe@demoproject.lt">20grupe@demoproject.lt</a>. Quas minima reiciendis suscipit similique a quidem!</p>
