--- a/index.html
+++ b/index.html
@@ -59,30 +59,38 @@
                 <h2>About startup</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos natus est quae molestiae odio a <a href="#">Matrox</a> minus tempora quod hic!</p>
 
-                <div class="progress-bar bar-1">
+                <div class="progress-bar">
                     <div class="top">
                         <div class="label">UX design</div>
                         <div class="value">90%</div>
                     </div>
                     <div class="bottom">
-                        <div class="progress"></div>
+                        <div class="progress" style="width: 90%;">
+                            <div class="bar"></div>
                     </div>
-                <div class="progress-bar bar-2">
+                </div>
+
+                <div class="progress-bar">
                     <div class="top">
                         <div class="label">UX design</div>
                         <div class="value">50%</div>
                     </div>
                     <div class="bottom">
-                        <div class="progress"></div>
+                        <div class="progress" style="width: 50%;">
+                            <div class="bar"></div>
                     </div>
-                    <div class="progress-bar bar-3">
+                </div>
+                
+                    <div class="progress-bar">
                         <div class="top">
                             <div class="label">UX design</div>
                             <div class="value">65%</div>
                         </div>
                         <div class="bottom">
-                            <div class="progress"></div>
-                        </div>                
+                            <div class="progress" style="width: 65%;">
+                                <div class="bar"></div>
+                        </div>
+                    </div>                
             </div>
         </div>
             <div class="right">
