rendering progress bars

--- a/index.html
+++ b/index.html
@@ -57,40 +57,7 @@
         <div class="long columns">
             <div class="left">
                 <h2>About startup</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos natus est quae molestiae odio a <a href="#">Matrox</a> minus tempora quod hic!</p>
-
-                <div class="progress-bar">
-                    <div class="top">
-                        <div class="label">UX design</div>
-                        <div class="value">90%</div>
-                    </div>
-                    <div class="bottom">
-                        <div class="progress" style="width: 90%;">
-                            <div class="bar"></div>
-                    </div>
-                </div>
-
-                <div class="progress-bar">
-                    <div class="top">
-                        <div class="label">UX design</div>
-                        <div class="value">50%</div>
-                    </div>
-                    <div class="bottom">
-                        <div class="progress" style="width: 50%;">
-                            <div class="bar"></div>
-                    </div>
-                </div>
-                
-                    <div class="progress-bar">
-                        <div class="top">
-                            <div class="label">UX design</div>
-                            <div class="value">65%</div>
-                        </div>
-                        <div class="bottom">
-                            <div class="progress" style="width: 65%;">
-                                <div class="bar"></div>
-                        </div>
-                    </div>                
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos natus est quae molestiae odio a <a href="#">Matrox</a> minus tempora quod hic!</p>        
             </div>
         </div>
             <div class="right">
@@ -125,7 +92,7 @@
             </p>
         </div>
     </footer>
-    <script src ="./js/main.js"></script>
+    <script src ="./js/main.js" type="module"></script>
 </body>
 
 </html>
@@ -143,3 +110,19 @@
         <a href=""></a>
     </nav>
 </header> -->
+
+<!-- 
+    
+js struktura.
+
+ components
+    progress-bar
+        renderProgressBar.js
+    socials
+        renderSocials.js
+    header
+        renderHeader.js
+ data
+    d1.js
+    d2.js
+    d3.js -->
