--- a/index.html
+++ b/index.html
@@ -72,15 +72,7 @@
         </div>  
     </main>
     <footer  class="container bg-main-color">
-        <div class="long">
-            <a href="#" target="_blank" class="fa fa-facebook" aria-hidden="true"></a>
-            <a href="#" target="_blank" class="fa fa-twitter" aria-hidden="true"></a>
-            <a href="#" target="_blank" class="fa fa-dribbble" aria-hidden="true"></a>
-            <a href="#" target="_blank" class="fa fa-tumblr" aria-hidden="true"></a>
-            <a href="#" target="_blank" class="fa fa-linkedin" aria-hidden="true"></a>
-            <a href="#" target="_blank" class="fa fa-instagram" aria-hidden="true"></a>
-            <a href="#" target="_blank" class="fa fa-rss" aria-hidden="true"></a>
-        </div>
+        <div class="long"></div>
         <div class="short">
             <img src="./img/logo-white.png" alt="logo-white">
             <p>
