--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <h2>About startup</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos natus est quae molestiae odio a <a href="#">Matrox</a> minus tempora quod hic!</p>        
             </div>
-        </div>
+        <!-- </div> -->
             <div class="right">
                 <h2>Have any question?</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit <a href="mailto:20grupe@demoproject.lt">20grupe@demoproject.lt</a>. Quas minima reiciendis suscipit similique a quidem!</p>
